--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     flex-direction: row;
     background-color: white;
     border-radius: 45px;
+    min-height: fit-content;
 
 }
 
@@ -27,6 +28,22 @@ body {
     justify-content: space-between;
 }
 
+.top-container h1 {
+    font-size: 100px;
+    padding: 0;
+    line-height: 0%;
+    font-weight: 100;
+}
+
+.top-container h3 {
+    font-weight:bold;
+    font-size: 30;
+    line-height: 0%;
+}
+
+.top-container h3 span {
+    color: gray;
+}
 .right-section {
     display: flex;
     flex-direction: column;
@@ -37,13 +54,13 @@ body {
     flex: 3;
 }
 
-.nav-bar{
+.nav-bar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.menu{
+.menu {
     display: flex;
     gap: 20px;
 }
@@ -56,7 +73,7 @@ body {
     height: fit-content;
 }
 
-.today-highlights{
+.today-highlights {
     display: flex;
     flex-direction: column;
 }
@@ -72,14 +89,13 @@ body {
 
 .week {
     padding-left: 5%;
-    padding-right: 15%;
+    padding-right: 10%;
     display: flex;
-    gap: 20px;
+    gap: 1rem;
     flex-direction: row;
-    justify-content: space-between;
 }
 
-.section-top >div{
+.section-top>div {
     border-radius: 20px;
     background-color: white;
     padding: 2% 5% 1% 3%;
@@ -87,7 +103,7 @@ body {
     width: 40%;
 }
 
-.section-bottom >div {
+.section-bottom>div {
     height: fit-content;
     border-radius: 20px;
     background-color: white;
@@ -95,6 +111,7 @@ body {
     height: 85%;
     width: 40%;
 }
+
 .section-bottom {
     padding-left: 5%;
     padding-right: 15%;
@@ -109,31 +126,92 @@ body {
     flex-direction: row;
 }
 
-.sunrise-container >div {
+.sunrise-container>div {
     display: flex;
     flex-direction: row;
 }
 
-.week >div{
+.week>div {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
     background-color: white;
     border-radius: 20px;
-    width: 140px;
-    height: auto;
-    padding: 2%;
+    min-width: 60px;
+    height: fit-content;
+    padding: 0% 2% 0% 2%;
 }
 
-hr{
+hr {
     border: 0;
     width: 50%;
     color: rgb(0, 0, 0);
     height: 2%;
 }
 
-.bottom-container{
+.bottom-container {
     display: flex;
     flex-direction: column;
 }
 
-.condition, .humidity {
+.condition,
+.humidity {
     display: flex;
+    gap: 1rem;
+}
+
+button{
+    border-radius: 100px;
+    border-width: o;
+    width: 40px;
+    height: 40px;
+    background-color: #D6D7DC;
+    color: black;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: black;;
+    color: white;
+}
+
+.week>div>img {
+    width: 30px;
+    height: auto;
+    padding: 0%;
+}
+
+.city-image {
+    border-radius: 10px;
+    padding-right: 5%;
+    padding-top: 5%;
+    padding-bottom: 6%;
+    width: 63%;
+    background-image: url('assets/new-york.jpeg'); background-repeat: no-repeat;
+    background-size:cover;
+    text-align: center;
+    color: white;
+    margin-bottom: 10px;
+}
+
+span{
+    color: grey;
+}
+
+input{
+    border-radius: 10px;
+    padding: 2%;
+    width: 80%;
+}
+
+.sunrise-sunset img {
+    width: auto;
+    height: 30px;
+    padding: 0%;
+    margin-top: 8px;
+}
+
+.wind-status img {
+    width: 12%;
+    padding: 0;
 }
